# DualMind-DataConnect

./: .gitignore  .retrigger  CODING_RULES.md  CONVERSATION.md  DECISIONS.md  MEMORY.md  PROTOCOL.md  README.md  STATUS.json  TASK.md  USER.md  dataconnect_spec.md
bridge/: watcher.sh
mind-a/: PERSONALITY.md
mind-b/: PERSONALITY.md
workspace/: pyproject.toml  requirements.txt
workspace/dataconnect/: __init__.py  __main__.py  benchmark.py  cli.py  cli_benchmark.py  config.py  database.py  exceptions.py  generator.py  models.py  storage.py  tuning.py  web.py
workspace/dataconnect/api/: __init__.py  auth.py  routes.py
workspace/dataconnect/router/: __init__.py  embeddings.py  graph.py
workspace/dataconnect/scanner/: __init__.py  profiler.py  relationships.py  schema.py
workspace/dataconnect/verifier/: __init__.py  aggregation_validation.py  base.py  completeness_audit.py  filter_validation.py  join_validation.py  result_plausibility.py  retry.py  schema_conformity.py
workspace/tests/: conftest.py  test_api.py  test_benchmark.py  test_cli.py  test_database.py  test_faiss_optimization.py  test_generator.py  test_models.py  test_packaging.py  test_py_typed.py  test_router_embeddings.py  test_router_graph.py  test_router_orchestrator.py  test_scanner_orchestrator.py  test_scanner_profiler.py  test_scanner_relationships.py  test_scanner_schema.py  test_storage.py  test_tuning.py  test_verifier_aggregation.py  test_verifier_base.py  test_verifier_completeness_audit.py  test_verifier_filter.py  test_verifier_join_validation.py  test_verifier_orchestrator.py  test_verifier_result_plausibility.py  test_verifier_retry.py  test_verifier_schema_conformity.py  test_web.py
